src/components/UI/Tooltip.module.css
.container {
  position: relative;
  display: inline-block; 
}

.tooltip {
  visibility: visible;
  position: absolute;
  z-index: 99;
  bottom: 125%;
  left: 75%;
  background-color: black;
  color: white;
  padding: 5px;
  border-radius: 5px;
  opacity: 0.8;
  height: auto;
  min-width: 8rem;
  max-width: 20rem; 
  font-size:  0.8rem;
  pointer-events: none;
}

.tooltip p {
  margin: 0;
  text-align: left;
}

.tooltip .title {
  margin: 0;
  font-weight: 600;
  white-space: nowrap;
}

.tooltip .description {
  margin: 0;
}

.tooltip .detail {
  margin: 0;
}

